--- a/css/NYT_Explorer.css
+++ b/css/NYT_Explorer.css
@@ -45,9 +45,8 @@ body, html {
 .backToTop{
   height: 20px;
   width: 20px;
+  color:white;
 }
-
-
 
 @media screen 
   and (min-device-width: 1200px) 
