--- a/src/NYT_Explorer.css
+++ b/src/NYT_Explorer.css
@@ -11,11 +11,11 @@
   color: #666666;
 }
 
-.backToTop{
-  height: 20px;
-  width: 20px;
+.fa-arrow-up{
+  size:3x;
   color:white;
 }
+
 
 @media screen 
   and (min-device-width: 1200px) 
@@ -114,3 +114,4 @@ background-color: #595959;
   display:none;
   }
 }
+
